# forgeflow

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  dashboard.md  evals.md  providers.md  workflow-spec.md
examples/: bulk_triage.yaml  home_service_dispatch.yaml  meeting_notes_to_action_plan.yaml  sales_lead_qualifier.yaml  support_triage.yaml
examples/evals/: bulk_triage_eval.yaml  sales_lead_qualifier_eval.yaml  support_triage_eval.yaml
scripts/: demo.sh  gen_demo_svg.py
src/forgeflow/: __init__.py  cli.py  db.py  scaffold.py
src/forgeflow/engine/: conditions.py  runner.py  steps.py  templating.py
src/forgeflow/evals/: __init__.py  assertions.py  runner.py
src/forgeflow/logging/: __init__.py  runs.py
src/forgeflow/memory/: __init__.py  models.py  sqlite.py
src/forgeflow/providers/: __init__.py  anthropic.py  base.py  mock.py  openai.py
src/forgeflow/schemas/: eval.py  workflow.py
src/forgeflow/tools/: __init__.py  builtins.py  registry.py
src/forgeflow/web/: __init__.py  app.py
tests/: conftest.py  test_cli.py  test_conditions.py  test_evals.py  test_map.py  test_memory.py  test_providers.py  test_runner.py  test_web.py
